--- a/services/security/package.json
+++ b/services/security/package.json
@@ -10,10 +10,15 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
     "@types/node": "18.x",
+    "@types/pg": "^8.11.4",
+    "@types/uuid": "^9.0.8",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.9.5"
   }
