--- a/gateways/user/package.json
+++ b/gateways/user/package.json
@@ -7,8 +7,15 @@
     "build": "tsc",
     "start-build-watch": "ts-node-dev --poll ./src/index.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.25.0",
+    "body-parser": "^1.19.1",
+    "express": "^4.17.1",
+    "joi": "^17.4.2"
+  },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
     "@types/node": "18.x",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.9.5"
