--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,14 @@ services:
       dockerfile: development.Dockerfile
     volumes:
       - ./services/user/src:/usr/src/app/src
+      - ./shared:/app/shared
     environment:
       <<: *common-node-variables
+      POSTGRES_USER: postgres
+			POSTGRES_HOST: postgres.db.riptest
+			POSTGRES_DB: riptest
+			POSTGRES_PASSWORD: postgres
+			POSTGRES_PORT: '5432'
     depends_on:
       - postgres.db.riptest
     # ports:
@@ -38,8 +44,14 @@ services:
       dockerfile: development.Dockerfile
     volumes:
       - ./services/security/src:/usr/src/app/src
+      - ./shared:/app/shared
     environment:
       <<: *common-node-variables
+      POSTGRES_USER: postgres
+			POSTGRES_HOST: postgres.db.riptest
+			POSTGRES_DB: riptest
+			POSTGRES_PASSWORD: postgres
+			POSTGRES_PORT: '5432'
     # ports:
     #   - 8082:80
   # -------------------------------------------------------------------------
@@ -50,6 +62,7 @@ services:
       dockerfile: development.Dockerfile
     volumes:
       - ./gateways/user/src:/usr/src/app/src
+      - ./shared:/app/shared
     environment:
       <<: *common-node-variables
     ports:
