--- a/services/user/package.json
+++ b/services/user/package.json
@@ -7,8 +7,15 @@
     "build": "tsc",
     "start-build-watch": "ts-node-dev --poll ./src/index.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
+    "express": "^4.17.1"
+  },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
     "@types/node": "18.x",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
