--- a/gateways/user/package.json
+++ b/gateways/user/package.json
@@ -17,7 +17,8 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "18.x",
-    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0-0",
     "typescript": "^4.9.5"
   }
 }
