--- a/services/security/package.json
+++ b/services/security/package.json
@@ -19,7 +19,8 @@
     "@types/node": "18.x",
     "@types/pg": "^8.11.4",
     "@types/uuid": "^9.0.8",
-    "ts-node-dev": "^1.1.8",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0-0",
     "typescript": "^4.9.5"
   }
 }
