--- a/services/user/package.json
+++ b/services/user/package.json
@@ -10,14 +10,18 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "joi": "^17.4.2",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/node": "18.x",
-    "ts-node-dev": "^1.1.8",
+    "@types/pg": "^8.11.4",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0-0",
     "typescript": "^4.6.3"
   }
 }
